welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:25: error: ')' expected but 'else' found.
		} else { 
                  ^